[package]
name = "experiments"
version = "0.1.0"
authors = ["Anonymous Author(s)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "explore"
path = "src/main.rs"

[workspace]
members = [
    "graph-explore"
]

[dependencies]
osmpbfreader = "0.14.0"
geo = "0.18.0"
graph-explore = { version = "^0.1.0", path = "graph-explore" }
clap = "3.0.0-beta.2"
rayon = "1.5.0"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"
indicatif = { version = "0.15.0", features = ["rayon"]}
roxmltree = "0.14.1"
log = "0.4.11"
chrono = "0.4"
fern = { version = "0.6.0", features = ["colored"] }

